--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1>We&rsquo;ll be back soon!</h1>
     <div>
         <p>Sorry for the inconvenience but we at indiabazzar, are performing some maintenance at the moment. If you need to you can always contact us on +91-8299766937, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; The Team</p>
+        <p>&mdash; The indiabazzar Team</p>
     </div>
 </article>
