--- a/product.html
+++ b/product.html
@@ -180,8 +180,8 @@
                   <div id="images" style='display:none' >
                     <ul class="thumbnails" style="visibility:hidden">
                       <li>
-                        <a data-image-id="7325113" data-img-id="img-id-1" href="#" data-medium-url="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x328x403.jpg" data-zoom-url="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x600x550.jpg" data-image-title="A legacy of spies" data-image-tag='&lt;span data-picture data-id=&quot;img-id-1&quot; class=&quot;responsive&quot; data-alt=&quot;A legacy of spies&quot; data-title=&quot;A legacy of spies&quot; data-class=&quot;&quot;&gt;&lt;span data-media=&quot;&quot; data-src=&quot;https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x225x225.jpg&quot;&gt;&lt;/span&gt;&lt;span data-media=&quot;(min-width:768px)&quot; data-src=&quot;https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x200x200.jpg&quot;&gt;&lt;/span&gt;&lt;span data-media=&quot;(min-width:992px)&quot; data-src=&quot;https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x328x403.jpg&quot;&gt;&lt;/span&gt;&lt;noscript&gt;&lt;img alt=&quot;A legacy of spies&quot; title=A legacy of spies src=&quot;https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x328x403.jpg&quot;&gt;&lt;/noscript&gt;&lt;/span&gt;'>
-                          <img src='https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x45x45.jpg' alt="A legacy of spies"></img>
+                        <a data-image-id="7325113" data-img-id="img-id-1" href="#" data-medium-url="assets/images/products/product0.jpg" data-zoom-url="assets/images/products/product0.jpg" data-image-title="A legacy of spies" data-image-tag='&lt;span data-picture data-id=&quot;img-id-1&quot; class=&quot;responsive&quot; data-alt=&quot;A legacy of spies&quot; data-title=&quot;A legacy of spies&quot; data-class=&quot;&quot;&gt;&lt;span data-media=&quot;&quot; data-src=&quot;assets/images/products/product0.jpg&quot;&gt;&lt;/span&gt;&lt;span data-media=&quot;(min-width:768px)&quot; data-src=&quot;assets/images/products/product0.jpg&quot;&gt;&lt;/span&gt;&lt;span data-media=&quot;(min-width:992px)&quot; data-src=&quot;assets/images/products/product0.jpg&quot;&gt;&lt;/span&gt;&lt;noscript&gt;&lt;img alt=&quot;A legacy of spies&quot; title=A legacy of spies src=&quot;assets/images/products/product0.jpg&quot;&gt;&lt;/noscript&gt;&lt;/span&gt;'>
+                          <img src='assets/images/products/product0.jpg' alt="A legacy of spies"></img>
                         </a>
                       </li>
                     </ul>
@@ -191,7 +191,7 @@
                   <div id="medium-image-holder" class="clearfix" data-zoom-text="">
                     <div class="var-img-slider">
                       <div class='var-img-slide' data-image-id="7325113">
-                        <span data-picture data-id="img-id-1" class="responsive" data-alt="A legacy of spies" data-title="A legacy of spies" data-class=""><span data-media="" data-src="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x225x225.jpg"></span><span data-media="(min-width:768px)" data-src="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x200x200.jpg"></span><span data-media="(min-width:992px)" data-src="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x328x403.jpg"></span><noscript><img alt="A legacy of spies" title=A legacy of spies src="https://bab-assets3.babapi.ooo/img/book/1341200/9d/d8/9780241308554.jpg.0a43ad9dd8.999x328x403.jpg"></noscript></span>
+                        <span data-picture data-id="img-id-1" class="responsive" data-alt="A legacy of spies" data-title="A legacy of spies" data-class=""><span data-media="" data-src="assets/images/products/product0.jpg"></span><span data-media="(min-width:768px)" data-src="assets/images/products/product0.jpg"></span><span data-media="(min-width:992px)" data-src="assets/images/products/product0.jpg"></span><noscript><img alt="A legacy of spies" title=A legacy of spies src="assets/images/products/product0.jpg"></noscript></span>
                       </div>
                     </div>
                   </div>
@@ -334,7 +334,6 @@
                         </form>
                       </div>
                     </div>
-                    <script src="https://bab-assets1.babapi.ooo/javascripts/ajax_for_zipcode_check.js?1489732062" type="text/javascript"></script>
                   </div>
                 </div>
                 <div class=" col-md-6 col-sm-6">
@@ -354,7 +353,6 @@
                 <p>
                   In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be 
                 </p>
-                
                 <span itemprop="description" style="display:none;">In this generation-defining self-help guide, a superstar blogger cuts through the crap to show us how to stop trying to be</span>
               </div>
               <div id="features" class="clearfix">
@@ -390,7 +388,55 @@
                   </li>
                 </ul>
               </div>
+              <div id="xsell" class="clearfix interested-in">
+                <h3 class="section-header">You may also be interested in</h3>
+                <ul class="clearfix grid-view block-grid md-bl-gd-3 sm-bl-gd-3 xs-bl-gd-2">
+                  <li class="clearfix">
+                    <div class="variant-wrapper btn-add_to_cart product-init">
+                      <div class="variant-image">
+                        <a href="#">
+                          <span data-picture="" data-id="" class="responsive" data-alt="The one minute millionaire" data-title="The one minute millionaire" data-class=""><span data-media="" data-src="assets/images/products/product1.jpg"></span><span data-media="(min-width:768px)" data-src="assets/images/products/product1.jpg"></span><span data-media="(min-width:992px)" data-src="assets/images/products/product1.jpg"><img alt="The one minute millionaire" title="The one minute millionaire" class="" src="assets/images/products/product1.jpg"></span><noscript>&lt;img alt="The one minute millionaire" title=The one minute millionaire src="assets/images/products/product1.jpg"&gt;</noscript></span>
+                        </a>
+                      </div>
+                      <div class="variant-desc">
+                        <span class="variant-title">
+                          <a href="#" title="The one minute millionaire">The one minute millionaire</a>
+                        </span>
+                        <span class="price">
+                          <span class="variant-list-price">
+                            <span class="m-w"><span class="m-c c-inr">Rs.</span>550</span>
+                          </span>
+                          <div class="discount-badge-new discount-badge-20" style="display:none"></div>
+                          <span class="variant-final-price">
+                            <span class="m-w">
+                              <span class="m-c c-inr">Rs.</span>440
+                            </span>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
               <div class="clearfix"></div>
+              <div id="reviews">
+                <h3 class="section-header" id="reviews-header" data-reviews-count="0">Reviews</h3>
+                Be the first one to review this product
+                <br><br>
+                <div id="write-review">
+                  <a href="#" class="button">Write a Review</a>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+              <div id="forum-page" class="clearfix">
+                <h3 class="section-header clearfix">Discussion:The Subtle Art of Not Giving a F* ck</h3>
+                <span class="start_discussion">Be the first to start a discussion</span>
+                <a href="#" class="button new_discussion">Start a new discussion</a>
+                <br><br>
+                <a href="#" class="browse_discussions">
+                  <b>Browse all Discussions on Books &gt; Health, Family &amp; Personal Development &gt; Personal Development &amp; Self-Helps</b>
+                </a>
+              </div>
             </div>
           </div>
         </div>
